language_tests/source_files/invalid/task_one_shot.tr
func main() async {
    let task = std.task.spawn(|| async { 1 as int32 })
    let _ = await task.value()
    let _ = await task.value()
}
